пора переходить на PostgreSQL

--- a/doc/install.txt
+++ b/doc/install.txt
@@ -12,4 +12,16 @@
  - инсталляция базы данных
  проверить, (и создать, если нет) директорию "filestorage" в "static" - тада будут складываться занружаемые файлы
  
+ убрал я работу с мускулом, 
  
+ pip uninstall pymysql
+ 
+ надо поставить какой - то пакет для работы с Postgre  
+  трахатся уже с ней. 
+  
+  PostgreSql user: postgres pwd: 123
+  
+  поставить ервер
+  поставить дравер между питоним и сервером
+  
+  
