Прошла инсталляция системы на хостинге, были изменения в ядре, начал изменять документацию о проекте

--- a/doc/install.txt
+++ b/doc/install.txt
@@ -4,24 +4,33 @@
  - торнадо 
  	
  	pip install tornado
- 	pip install psycopg2
  	pip install bcrypt
+
+
+ 	pip install psycopg2
  	
  	pip install py-postgresql
  	
  	
- проверить, (и создать, если нет) директорию "filestorage" в "static" - тада будут складываться занружаемые файлы
+ проверить, (и создать, если нет) директорию "filestorage" в "static" - туда будут складываться загружаемые файлы
  
  - инсталляция базы данных
  сервер баз данных  PostgreSQL  
  как его инсталлировать я не рассказываю, все люди взрослые... 
- 
- в директории "sql" лежит файл "ver_161004.SQL" его исполнить в инструментах по 
- работе с сервером PostgreSQL  
- 
-  дока по драверу 
+
+  дока по драйверу 
   http://pythonhosted.org/py-postgresql/
-  
+
+ 
+ в директории "sql" лежит файл "ver_XXX.SQL" Брать самую свежую версию; 
+ его исполнить в инструментах по работе с сервером PostgreSQL  
+ Дополнительные файлы, необходимые для исправления схемы данных  
+ находятся в файлах вида "upd_XXX.SQL" применять файлы стоит последовательно,  
+ от младших номеров к старшим.
+ 
+
+в настоящее время внешний вид веб- представления основывается на открытом шаблоне "KAdmin" 
+думаю, его возможностей мне хватит.  
   
   
   
